feat: fix infinite recursion JSON and sync Order/Ticket status